[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/Doomguy sem arma skin2 2.png" type="Texture" id=2]
[ext_resource path="res://Assets/Player/Character.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Sprites/weapon futurista contornada.png" type="Texture" id=4]

[sub_resource type="CapsuleShape2D" id=1]
height = 9.38423

[sub_resource type="CapsuleShape2D" id=2]
radius = 11.0
height = 9.31782

[sub_resource type="CapsuleShape2D" id=3]
height = 12.0

[node name="Player" instance=ExtResource( 3 )]
script = ExtResource( 1 )
MaxHealth = 4
cooldownP1 = 3.0
cooldownP2 = 3.0

[node name="Sprite" parent="." index="0"]
texture = ExtResource( 2 )

[node name="CollisionShape2D" parent="." index="1"]
shape = SubResource( 1 )

[node name="Weapon" parent="." index="2"]
texture = ExtResource( 4 )

[node name="Position2D" parent="Weapon" index="0"]
position = Vector2( 26, -1 )

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 0, -0.220366 )
shape = SubResource( 2 )

[node name="PowerUp1CD" parent="." index="5"]
process_mode = 0
wait_time = 3.0

[node name="AbilityButton" parent="Camera2D/CanvasLayer/Control/HBoxContainer" index="0"]
cooldown = 3.0

[node name="CollisionShape2D" parent="ItemCollectArea" index="0"]
position = Vector2( 0.00890923, -0.0941588 )

[node name="CollisionShape2D" parent="Buffs_Controller/Spikes" index="0"]
shape = SubResource( 3 )
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[editable path="Weapon"]

[editable path="HurtBox"]

[editable path="Buffs_Controller"]

[editable path="Buffs_Controller/Spikes"]
